<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Wanderlusters</string>
    <string name="network_not_enabled">Gps Tidak Aktif</string>
    <string name="open_location_settings">Harap mengaktifkan lokasi anda untuk melihat wisata terdekat dengan anda</string>
    <string name="direction">Tidak ada data untuk akses ketempat, apakah anda mau menggunakan direction untuk mengetahui akses ketempat ini</string>
    <string name="yes">Iya</string>
    <string name="cancel">Batal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nearby_tour">Wisata Terdekat</string>
    <string name="not_found_tour">Wisata Tidak Ditemukan</string>
    <string name="gps_off">Gps Tidak Aktif</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>
    <string name="like">Like</string>

    ///// id ads mob
    <string name="ads_native_advance">ca-app-pub-2863783427636380/8887054820</string>
    <string name="ads_institial">ca-app-pub-2863783427636380/2008168745</string>
    <string name="ads_banner">ca-app-pub-2863783427636380/9050706350</string>
    <string name="ads_mob_ID">ca-app-pub-2863783427636380~4401014905</string>

    ///// Login
    <string name="title_login">Selamat datang di Wanderlusters</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="email">Email</string>
    <string name="buat_akun">Buat Akun</string>

    ///// facebook
    <string name="facebook_app_id">2435991553382079</string>
    <string name="fb_login_protocol_scheme">fb2435991553382079</string>

    //// Password
    <string name="hint_password">Kata sandi Anda harus menyertakan setidaknya satu symbol, satu huruf besar, satu angka dan terdiri atas 8 karakter atau lebih</string>
    <string name="create_password">Buat kata sandi</string>
    <string name="change_password">Ganti kata sandi</string>
    <string name="password">KATA SANDI</string>
    <string name="show">Tampilkan</string>
    <string name="hide">Sembunyikan</string>
    <string name="password_old">KATA SANDI LAMA</string>
    <string name="new_password">KATA SANDI BARU</string>
    <string name="password_confirm">kata sandi dan konfirmasi kata sandi tidak cocok</string>
    <string name="password_8_karakter">Panjang kata sandi minimal harus 8 karakter !!</string>
    <string name="password_special_karakter">Kata sandi harus memiliki setidaknya satu karakter khusus !!</string>
    <string name="password_uppercase">Kata sandi harus memiliki setidaknya satu karakter huruf besar !!</string>
    <string name="password_lowercase">Kata sandi harus memiliki setidaknya satu karakter huruf kecil !!</string>
    <string name="passwrod_number">Kata sandi harus memiliki setidaknya satu digit angka !!</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    ///////// Toast show
    <string name="error_resp_json">Internet bermasalah, coba lagi</string>
    <string name="error_resp_internet_con">Tidak ada koneksi internet, periksa dan hubungkan kembali</string>
    <string name="toast_cancel">Batalkan</string>
    <string name="namaUser">Username</string>
    <string name="namaFull">Fullname</string>
    <string name="maps_default">Default</string>
    <string name="maps_satelite">Satellite</string>
    <string name="maps_terrain">Medan</string>
    <string name="jenis_peta">Jenis Peta</string>
    <string name="detail_peta">Detail Peta</string>
    <string name="masuk">Masuk</string>
    <string name="no">Tidak</string>
    <string name="home">Home</string>
    <string name="favorite">Favorit</string>
    <string name="populer" tools:ignore="Typos">Populer</string>
    <string name="user">User</string>
    <string name="titleRegister">Siapa Anda?</string>
    <string name="phone">Nomor HP</string>
    <string name="ulasan">Ulasan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="birth"><![CDATA[Tempat & Tanggal Lahir]]></string>
    <string name="lastLogin">Terakhir Login</string>
    <string name="changePassword">Ubah Kata Sandi</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="logout">Keluar</string>
    <string name="akun">Akun</string>
    <string name="profile">Profil</string>
    <string name="nearby">Terdekat</string>
    <string name="_yearBuild">2019</string>
    <string name="notFoundUlasan">Ulasan tidak ditemukan</string>
    <string name="clickUlasan">Jadilah yang pertama memberikan ulasan untuk wisata ini</string>
    <string name="allUlasan">Tampilkan semua ulasan</string>
    <string name="buka">Buka</string>
    <string name="tentang">Tentang</string>
    <string name="foto">Foto</string>
    <string name="lihat_semua">Lihat semua</string>
    <string name="createFoto">Tambahkan Foto</string>
    <string name="noFoundFoto">Foto tidak ditemukan</string>
    <string name="_5">5</string>
    <string name="ratting">Ratting</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="__5">/5</string>

    ////String Picker
    <string name="picker_select">Upload</string>
    <plurals name="picker_selected_count">
        <item quantity="one">%d image selected</item>
        <item quantity="other">%d images selected</item>
    </plurals>
    <string name="transition_string">hello</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="create_ulasan">Berikan Ulasan Anda</string>
    <string name="akses_wisata">Akses Wisata</string>
    <string name="lokasi_wisata">Lokasi Wisata</string>
    <string name="username">Username</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="simpan">Simpan</string>
    <string name="title_connection">Tidak ada koneksi internet</string>
    <string name="body_connection">Anda harus memiliki Data Seluler atau wifi untuk mengakses ini. Tekan OK untuk mengaktifkan internet</string>
</resources>
