<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_nearby"
        android:enabled="true"
        android:icon="@drawable/ic_nearby"
        android:title="@string/nearby"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_popular"
        android:enabled="true"
        android:icon="@drawable/ic_popular_"
        android:title="@string/populer"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_user"
        android:enabled="true"
        android:icon="@drawable/ic_user"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>