<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_peta"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:id="@+id/title_jenis"
        android:padding="@dimen/itemBetweenMargin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/title_jenis"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <RadioButton
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="@dimen/padding_10"
            android:button="@null"
            android:drawableTop="@drawable/ic_default"
            android:gravity="center"
            android:id="@+id/default_maps"
            android:text="@string/maps_default"
            android:textColor="@color/grey_700"
            />
        <RadioButton
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="@dimen/padding_10"
            android:button="@null"
            android:drawableTop="@drawable/ic_satelite"
            android:gravity="center"
            android:id="@+id/satellite_maps"
            android:text="@string/maps_satelite"
            android:textColor="@color/grey_700"
            />
        <RadioButton
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="@dimen/padding_10"
            android:button="@null"
            android:drawableTop="@drawable/ic_terrain"
            android:gravity="center"
            android:id="@+id/terrain_maps"
            android:text="@string/maps_terrain"
            android:textColor="@color/grey_700"
            />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>