<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".feature.editProfil.EditProfilActivity"
    tools:ignore="Autofill,TextFields">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                style="@style/TextInputLayoutStyle"
                android:layout_margin="@dimen/padding_10"
                android:id="@+id/tilUsername"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:id="@+id/userName"
                    android:hint="@string/username"
                    android:gravity="center_vertical"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:maxLength="50"
                    android:padding="@dimen/padding_10"
                    android:textColor="@color/default_textColor"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                style="@style/TextInputLayoutStyle"
                android:id="@+id/tilFullname"
                android:layout_margin="@dimen/padding_10"
                app:layout_constraintTop_toBottomOf="@id/tilUsername"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:id="@+id/fullName"
                    android:hint="@string/fullname"
                    android:gravity="center_vertical"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:maxLength="100"
                    android:padding="@dimen/padding_10"
                    android:textColor="@color/default_textColor"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilEmail"
                android:theme="@style/TextInputLayoutStyle"
                style="@style/TextInputLayoutStyle"
                android:layout_margin="@dimen/padding_10"
                app:layout_constraintTop_toBottomOf="@id/tilFullname"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:id="@+id/email"
                    android:hint="@string/email"
                    android:gravity="center_vertical"
                    android:inputType="textWebEmailAddress"
                    android:maxLines="1"
                    android:padding="@dimen/padding_10"
                    android:textColor="@color/default_textColor"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilMobilePhone"
                android:theme="@style/TextInputLayoutStyle"
                style="@style/TextInputLayoutStyle"
                android:layout_margin="@dimen/padding_10"
                app:layout_constraintTop_toBottomOf="@id/tilEmail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:id="@+id/phone"
                    android:hint="@string/phone"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:maxLength="13"
                    android:maxLines="1"
                    android:padding="@dimen/padding_10"
                    android:textColor="@color/default_textColor"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilTempatLahir"
                android:theme="@style/TextInputLayoutStyle"
                style="@style/TextInputLayoutStyle"
                android:layout_margin="@dimen/padding_10"
                app:layout_constraintTop_toBottomOf="@id/tilMobilePhone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:id="@+id/tempatLahir"
                    android:hint="@string/tempat_lahir"
                    android:gravity="center_vertical"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:padding="@dimen/padding_10"
                    android:textColor="@color/default_textColor"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilTanggalLahir"
                android:theme="@style/TextInputLayoutStyle"
                style="@style/TextInputLayoutStyle"
                android:layout_margin="@dimen/padding_10"
                app:layout_constraintTop_toBottomOf="@id/tilTempatLahir"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:id="@+id/tanggalLahir"
                    android:hint="@string/tanggal_lahir"
                    android:gravity="center_vertical"
                    android:focusableInTouchMode="false"
                    android:inputType="date"
                    android:maxLines="1"
                    android:padding="@dimen/padding_10"
                    android:textColor="@color/default_textColor"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_10"
                android:layout_marginTop="@dimen/padding_20"
                android:layout_marginRight="@dimen/padding_10"
                android:id="@+id/titleGender"
                app:layout_constraintTop_toBottomOf="@id/tilTanggalLahir"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/jenis_kelamin" />
            <RadioGroup
                android:id="@+id/rg_hubungan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_10"
                android:layout_marginRight="@dimen/padding_10"
                android:layout_marginBottom="@dimen/activityVerticalMargin_big2"
                app:layout_constraintTop_toBottomOf="@id/titleGender"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_pria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/pria"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_wanita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/wanita"
                    android:textColor="@color/black" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.cardview.widget.CardView
        style="@style/CardViewButtonWhite"
        android:id="@+id/cvEdit"
        android:layout_margin="@dimen/padding_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/simpan"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/ic_gradient"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/loadingOverlay"
        android:visibility="gone"
        android:background="@color/greyTransparent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/customProgress"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>