<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:ignore="Autofill,LabelFor"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_login"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/padding_10"
                android:id="@+id/title_login"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/image_login"/>
            <ImageView
                android:layout_width="@dimen/height_200"
                android:layout_height="@dimen/height_200"
                android:src="@drawable/ic_logo_icon"
                android:id="@+id/image_login"
                app:layout_constraintTop_toBottomOf="@id/title_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tilEmail"
                android:contentDescription="@string/app_name"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                style="@style/TextInputLayoutStyle"
                android:layout_margin="@dimen/padding_10"
                android:id="@+id/tilEmail"
                app:layout_constraintTop_toBottomOf="@id/image_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:id="@+id/email"
                    android:hint="@string/email"
                    android:gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:maxLength="50"
                    android:padding="@dimen/padding_10"
                    android:textColor="@color/default_textColor"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                style="@style/TextInputLayoutStyle"
                android:layout_margin="@dimen/padding_10"
                android:id="@+id/tilPassword"
                app:passwordToggleTint="@color/colorPrimary"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:layout_constraintTop_toBottomOf="@id/tilEmail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:id="@+id/password"
                    android:hint="@string/password"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding_10"
                    android:textColor="@color/default_textColor"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        style="@style/CardViewButton"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/btn_masuk"
        app:cardBackgroundColor="@color/grey_400"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/masuk"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loadingOverlay"
        android:visibility="gone"
        android:background="@color/greyTransparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/customProgress"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>